// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ecosystem-ci > should apply basic npm file:../../ override (tsdown-obug failure) > ecosystem-ci-output 1`] = `
{
  "stderr": "Error: Failed to execute action "pnpm vitest run" for package tsdown.
stderr:

⎯⎯⎯⎯⎯⎯ Failed Suites 12 ⎯⎯⎯⎯⎯⎯

 FAIL  tests<path> [ tests<path> ]
 FAIL  tests<path> [ tests<path> ]
 FAIL  tests<path> [ tests<path> ]
 FAIL  tests<path> [ tests<path> ]
 FAIL  tests<path> [ tests<path> ]
 FAIL  tests<path> [ tests<path> ]
 FAIL  tests<path> [ tests<path> ]
 FAIL  tests<path> [ tests<path> ]
 FAIL  src<path> [ src<path> ]
 FAIL  src<path> [ src<path> ]
 FAIL  src<path> [ src<path> ]
 FAIL  src<path> [ src<path> ]
Error: Intentional failure from obug package
 ❯ Debug node_modules<path>@file+..+.._ms@2.1.3<path>:4:9
 ❯ src<path>:9:15
      7| import type { ResolvedConfig, UserConfig } from '..<path>'
      8| 
      9| const debug = Debug('tsdown:clean')
       |               ^
     10| 
     11| const RE_LAST_SLASH = /[///]$/
 ❯ src<path>:6:1

⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯[1<path>]⎯
stdout:

 RUN  v4.0.8 <cwd>.ecosystem-ci<path>


 Test Files  12 failed (12)
      Tests  no tests
   Start at  19
   Duration  367ms (transform 223ms, setup 0ms, collect 0ms, tests 0ms, environment 1ms, prepare 43ms)
    at ecosystemCi (file://<root><path>)
    at process.processTicksAndRejections (internal<path>)
    at async CAC.<anonymous> (file://<root><path>)
    at async runCLI (file://<root><path>)
    at async file://<root><path>",
  "stdout": "Running ecosystem-ci...
Force option enabled. Removing contents of <cwd>.ecosystem-ci...
Cloning package tsdown into <cwd>.ecosystem-ci<path>
Replaced npm import for package tsdown in <cwd>.ecosystem-ci<path>
Running actions for package tsdown...
  Executing action: pnpm i --no-frozen-lockfile
  Executing action: pnpm run build
  Executing action: pnpm vitest run",
}
`;

exports[`ecosystem-ci > should apply basic npm file:../../ override (tsdown-obug success) > ecosystem-ci-output 1`] = `
{
  "stderr": "",
  "stdout": "Running ecosystem-ci...
Force option enabled. Removing contents of <cwd>.ecosystem-ci...
Cloning package tsdown into <cwd>.ecosystem-ci<path>
Replaced npm import for package tsdown in <cwd>.ecosystem-ci<path>
Running actions for package tsdown...
  Executing action: pnpm i --no-frozen-lockfile
  Executing action: pnpm run build
  Executing action: pnpm vitest run
Ran ecosystem-ci successfully.",
}
`;

exports[`ecosystem-ci > should apply pnpm override (vite-unrun failure on Node 20) > ecosystem-ci-output 1`] = `
{
  "stderr": "",
  "stdout": "Running ecosystem-ci...
Force option enabled. Removing contents of <cwd>.ecosystem-ci...
Cloning package vite into <cwd>.ecosystem-ci<path>
Added pnpm overrides for package vite in <cwd>.ecosystem-ci<path>
Running actions for package vite...
  Executing action: pnpm i --no-frozen-lockfile
  Executing action: pnpm run build
  Executing action: pnpm run test-unit
Ran ecosystem-ci successfully.",
}
`;

exports[`ecosystem-ci > should apply pnpm override (vite-unrun success) > ecosystem-ci-output 1`] = `
{
  "stderr": "",
  "stdout": "Running ecosystem-ci...
Force option enabled. Removing contents of <cwd>.ecosystem-ci...
Cloning package vite into <cwd>.ecosystem-ci<path>
Added pnpm overrides for package vite in <cwd>.ecosystem-ci<path>
Running actions for package vite...
  Executing action: pnpm i --no-frozen-lockfile
  Executing action: pnpm run build
  Executing action: pnpm run test-unit
Ran ecosystem-ci successfully.",
}
`;
